--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    </head>
+</html>
 
